Prevent notification component title overlapping icon
This overlap issue had been dealt with for 'body' but not 'title'.

Wrapped title and body in a class called 'content' in order to avoid
duplicating the padding.

--- a/app/components/shared/notification_component/notification_component.scss
+++ b/app/components/shared/notification_component/notification_component.scss
@@ -30,11 +30,11 @@
     outline: $govuk-focus-width solid $govuk-focus-colour;
   }
 
-  &.icon--left .govuk-notification__body {
+  &.icon--left .govuk-notification__content {
     padding-left: govuk-spacing(5);
   }
 
-  &.icon--right .govuk-notification__body {
+  &.icon--right .govuk-notification__content {
     padding-right: govuk-spacing(5);
   }
 }
